--- a/demo-app/manifest.yaml
+++ b/demo-app/manifest.yaml
@@ -6,21 +6,26 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-test-1-deploy
+  name: app-entry-deploy
   namespace: demo
 spec:
   replicas: 1
   selector:
     matchLabels: 
-      app: app-test-1
+      app: app-entry
   template:
     metadata:
       labels:
-        app: app-test-1
+        app: app-entry
     spec:
       containers:
-      - name: app-test-1
-        image: char:01
+      - name: app-entry
+        image: entry:01
+        env:
+        - name: CHARDNS
+          value: "app-char-svc:5000"
+        - name: CAMELDNS
+          value: "app-camel-svc:5000"
         ports:
         - name: web
           containerPort: 5000
@@ -28,10 +33,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-test-1-svc
+  name: app-entry-svc
   namespace: demo
   labels:
-    app: app-test-1
+    app: app-entry
 spec:
   type: ClusterIP
   ports:
@@ -40,4 +45,82 @@ spec:
     targetPort: 5000
     protocol: TCP
   selector:
-    app: app-test-1
+    app: app-entry
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app-char-deploy
+  namespace: demo
+spec:
+  replicas: 1
+  selector:
+    matchLabels: 
+      app: app-char
+  template:
+    metadata:
+      labels:
+        app: app-char
+    spec:
+      containers:
+      - name: app-char
+        image: char:01
+        ports:
+        - name: web
+          containerPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-char-svc
+  namespace: demo
+  labels:
+    app: app-char
+spec:
+  type: ClusterIP
+  ports:
+  - name:  http
+    port:  5000
+    targetPort: 5000
+    protocol: TCP
+  selector:
+    app: app-char
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app-camel-deploy
+  namespace: demo
+spec:
+  replicas: 1
+  selector:
+    matchLabels: 
+      app: app-camel
+  template:
+    metadata:
+      labels:
+        app: app-camel
+    spec:
+      containers:
+      - name: app-camel
+        image: camel:01
+        ports:
+        - name: web
+          containerPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-camel-svc
+  namespace: demo
+  labels:
+    app: app-camel
+spec:
+  type: ClusterIP
+  ports:
+  - name:  http
+    port:  5000
+    targetPort: 5000
+    protocol: TCP
+  selector:
+    app: app-camel
