--- a/demo-app/manifest.yaml
+++ b/demo-app/manifest.yaml
@@ -6,64 +6,20 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-entry-deploy
+  name: app-test-1-deploy
   namespace: demo
 spec:
   replicas: 1
   selector:
     matchLabels: 
-      app: app-entry
+      app: app-test-1
   template:
     metadata:
       labels:
-        app: app-entry
+        app: app-test-1
     spec:
       containers:
-      - name: app-entry
-        image: entry:01
-        env:
-        - name: CHARDNS
-          value: "app-char-svc:5000"
-        - name: CAMELDNS
-          value: "app-camel-svc:5000"
-        ports:
-        - name: web
-          containerPort: 5000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: app-entry-svc
-  namespace: demo
-  labels:
-    app: app-entry
-spec:
-  type: ClusterIP
-  ports:
-  - name:  http
-    port:  5000
-    targetPort: 5000
-    protocol: TCP
-  selector:
-    app: app-entry
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: app-char-deploy
-  namespace: demo
-spec:
-  replicas: 1
-  selector:
-    matchLabels: 
-      app: app-char
-  template:
-    metadata:
-      labels:
-        app: app-char
-    spec:
-      containers:
-      - name: app-char
+      - name: app-test-1
         image: char:01
         ports:
         - name: web
@@ -72,10 +28,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-char-svc
+  name: app-test-1-svc
   namespace: demo
   labels:
-    app: app-char
+    app: app-test-1
 spec:
   type: ClusterIP
   ports:
@@ -84,43 +40,4 @@ spec:
     targetPort: 5000
     protocol: TCP
   selector:
-    app: app-char
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: app-camel-deploy
-  namespace: demo
-spec:
-  replicas: 1
-  selector:
-    matchLabels: 
-      app: app-camel
-  template:
-    metadata:
-      labels:
-        app: app-camel
-    spec:
-      containers:
-      - name: app-camel
-        image: camel:01
-        ports:
-        - name: web
-          containerPort: 5000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: app-camel-svc
-  namespace: demo
-  labels:
-    app: app-camel
-spec:
-  type: ClusterIP
-  ports:
-  - name:  http
-    port:  5000
-    targetPort: 5000
-    protocol: TCP
-  selector:
-    app: app-camel
+    app: app-test-1
